Add Yahoo Finance integration with OHLCV data storage and retrieval